<resources>
    <string name="app_name">MovieAppRetrofitApiConnection</string>
    <string name="itemMenuHome">Home</string>
    <string name="itemMenuFavorite">Favoritos</string>
    <string name="itemMenuAccount">Conta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textCharactersTitle">Personagens</string>
    <string name="textMoviesTitle">Filmes</string>
    <string name="textVideosTitle">Vídeos</string>
    <string name="contentDescriptionFilterImageButton">Botão filtrar itens da lista</string>
    <string name="textViewVotesTitle">Votos:</string>
    <string name="contentDescriptionImageMoviePoster">Imagem que representa a capa do filme</string>
    <string name="textViewDurationTitle">Duração:</string>
    <string name="textViewDurationTimeType">min</string>
    <string name="contentDescriptionButtonPlay">Botão para dar play ao filme</string>
    <string name="textViewActorsTitle">Atores</string>
    <string name="textViewDetailsTitle">Detalhes</string>
    <string name="textViewDirectorTitle">Diretor:</string>
    <string name="textViewReleaseTitle">Lançamento:</string>
    <string name="textViewBudgetTitle">Orçamento:</string>
    <string name="textViewRevenueTitile">Bilheteria:</string>
    <string name="contentDescriptionImageDirector">imagem do diretor do filme</string>
    <string name="contentDescriptionButtonBackToHome">Botão de voltar para lista de filmes</string>
    <string name="contentDescriptionAddFavoriteCharacter">Imagem com um coração, clique nela para adicionar aos favoritos</string>
    <string name="contentDescriptionViewCharacter">imagem do personagem</string>
    <string name="genericError">Ops!!!\nTivemos um problema com nosso servidor\nque tal tentar novamente mais tarde.</string>
    <string name="emptyDataError">Desculpe\nnão encontramos nenhuma informação por aqui.</string>
    <string name="internetError">Hmm..\nParece que você está sem internet\nTente reconectar á alguma rede WiFi ou dados móveis.</string>
    <string name="itemMenuClearAllData">Excluir Favoritos</string>
    <string name="toolbarFavoritesTitle">Lista de Favoritos</string>
</resources>