<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleDark">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewMovieCover"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:contentDescription="@string/contentDescriptionImageMoviePoster"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/purpleDarkLight"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMovieCover">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewTitleValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="88dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Titulo" />

                <TextView
                    android:id="@+id/textViewMediaVotesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/yellow"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textViewTitleValue"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTitleValue"
                    tools:text="1.5" />

                <RatingBar
                    android:id="@+id/ratingBarMoviePopularity"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:theme="@style/RatingBar"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewMediaVotesValue"
                    app:layout_constraintStart_toEndOf="@+id/textViewMediaVotesValue"
                    app:layout_constraintTop_toTopOf="@+id/textViewMediaVotesValue" />

                <TextView
                    android:id="@+id/textViewMovieDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textViewMediaVotesValue"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMediaVotesValue"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/textViewDurationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/textViewDurationTitle"
                    android:textColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewMediaVotesValue"
                    app:layout_constraintEnd_toStartOf="@+id/textViewDurationValue"
                    app:layout_constraintTop_toTopOf="@+id/textViewMediaVotesValue" />

                <TextView
                    android:id="@+id/textViewDurationValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/gray"
                    app:layout_constraintEnd_toStartOf="@+id/textViewDurationTimeType"
                    app:layout_constraintTop_toTopOf="@+id/textViewDurationTitle"
                    tools:text="000" />

                <TextView
                    android:id="@+id/textViewDurationTimeType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/textViewDurationTimeType"
                    android:textColor="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textViewDurationValue" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="485dp" />

        <ImageButton
            android:id="@+id/imageButtonPlay"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_button_play_description"
            android:contentDescription="@string/contentDescriptionButtonPlay"
            android:elevation="3dp"
            android:src="@drawable/ic_baseline_play_arrow_24"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            tools:targetApi="lollipop" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/purpleDarkLight"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewActorsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/textViewActorsTitle"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewActors"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardBackgroundColor="@color/purpleDarkLight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewActorsTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/purpleDarkLight"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/textViewDetailsTitle"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewDirectorTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/textViewDirectorTitle"
                    android:textColor="@color/gray"
                    app:layout_constraintStart_toEndOf="@+id/cardView4"
                    app:layout_constraintTop_toTopOf="@+id/cardView4" />

                <TextView
                    android:id="@+id/textViewReleaseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/textViewReleaseTitle"
                    android:textColor="@color/gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView4" />

                <TextView
                    android:id="@+id/textViewBudgetTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/textViewBudgetTitle"
                    android:textColor="@color/gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewReleaseTitle" />

                <TextView
                    android:id="@+id/textViewRevenueTitile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/textViewRevenueTitile"
                    android:textColor="@color/gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewBudgetTitle" />

                <TextView
                    android:id="@+id/textViewDirectorNameValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textViewDirectorTitle"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDirectorTitle"
                    tools:text="nome do diretor" />

                <TextView
                    android:id="@+id/textViewDateReleaseValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewReleaseTitle"
                    app:layout_constraintStart_toEndOf="@+id/textViewReleaseTitle"
                    app:layout_constraintTop_toTopOf="@+id/textViewReleaseTitle"
                    tools:text="20/10/2000" />

                <TextView
                    android:id="@+id/textViewBudgetValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewBudgetTitle"
                    app:layout_constraintStart_toEndOf="@+id/textViewBudgetTitle"
                    app:layout_constraintTop_toTopOf="@+id/textViewBudgetTitle"
                    tools:text="0.0000" />

                <TextView
                    android:id="@+id/textViewRevenueValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewRevenueTitile"
                    app:layout_constraintStart_toEndOf="@+id/textViewRevenueTitile"
                    app:layout_constraintTop_toTopOf="@+id/textViewRevenueTitile"
                    tools:text="0.000000" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDetailsTitle">

                    <ImageView
                        android:id="@+id/imageViewDirector"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/contentDescriptionImageDirector"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/imageButtonBackToHome"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_back_button_description_layout"
            android:contentDescription="@string/contentDescriptionButtonBackToHome"
            android:src="@drawable/ic_round_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>