<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purpleDarkLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/textCharactersMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/textCharactersTitle"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textMoviesMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/textMoviesTitle"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/textCharactersMenu"
                app:layout_constraintStart_toEndOf="@+id/textCharactersMenu" />

            <TextView
                android:id="@+id/textVideosMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/textVideosTitle"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/textMoviesMenu"
                app:layout_constraintStart_toEndOf="@+id/textMoviesMenu" />

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_custom_search_view"
                android:searchIcon="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButtonFilters"
                app:layout_constraintStart_toStartOf="@+id/textCharactersMenu"
                app:layout_constraintTop_toBottomOf="@+id/textCharactersMenu"
                tools:targetApi="lollipop" />

            <ImageButton
                android:id="@+id/imageButtonFilters"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_custom_search_view"
                android:contentDescription="@string/contentDescriptionFilterImageButton"
                android:src="@drawable/ic_filter"
                app:layout_constraintBottom_toBottomOf="@+id/searchView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/searchView"
                app:layout_constraintTop_toTopOf="@+id/searchView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/navigation_graph">
    </androidx.fragment.app.FragmentContainerView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        style="@style/Widget.MaterialComponents.BottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:elevation="16dp"
        app:backgroundTint="@color/purpleDark"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>